More detailed exception message for invalid parameter values